samples/bad/imports-missing-path/imports.mf
<imports>
  <package name="MissingPackage" path="missing-package" />
</imports>
